# logistic-regression

./: .gitignore  README.md  homework.ipynb  pyproject.toml  test_solution.py
dmia/classifiers/: logistic_regression.py
