[project]
name = "logistic-regression"
version = "0.1.0"
description = "Logistic Regression implementation for Amazon reviews classification"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "jupyter>=1.0.0",
    "tqdm>=4.65.0",
    "scipy-stubs>=1.15.3.0",
]

[tool.uv]
dev-dependencies = []
